--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TeamProject"
         tools:targetApi="31">
         <activity
+            android:name=".setting.Human"
+            android:exported="false" />
+        <activity
             android:name=".setting.favorites"
             android:exported="false" />
         <activity
